--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "tachyons-sass": "^4.9.3",
     "uuid": "^3.2.1"
   },
   "keywords": [
@@ -36,8 +37,5 @@
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^1.7.4"
   }
 }
