--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -63,7 +63,7 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "faq-page"}
           - {label: Title, name: title, widget: string}
-          - {label: "FAQs", name: "faqs", widget: list, field: [{label: "Question", name: "question", widget: "text"}, {label: "Answer", name: "answer", widget: "markdown"}]}
+          - {label: "FAQs", name: "faqs", widget: "list", fields: [{label: "Question", name: "question", widget: "text"}, {label: "Answer", name: "answer", widget: "markdown"}]}
           - {label: "FAQ Note", name:"faqNote", widget: "markdown"}
       - file: "src/pages/contact/index.md"
         label: "Contact"
@@ -80,7 +80,7 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "resources-page"}
           - {label: Title, name: title, widget: string}
-          - {label: "Resources", name: "resources", widget: object, field: [{label: "Resource", name: "resource", widget: "markdown"}]}
+          - {label: "Resources", name: "resources", widget: object, fields: [{label: "Resource", name: "resource", widget: "markdown"}]}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
