--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -73,7 +73,7 @@ collections:
           - {label: Title, name: title, widget: string}
           - {label: "Ossington Map", name: "ossingtonMap", widget: "object", fields: [{label: "Map Link", name: "mapLink", widget: "string"}, {label: "Address", name: "address", widget: "text"}, {label: "Schedule", name: "schedule", widget: "markdown"}, {label: "Notes", name: "notes", widget: "text"}]}
           - {label: "Dundas Map", name: "dundasMap", widget: "object", fields: [{label: "Map Link", name: "mapLink", widget: "string"}, {label: "Address", name: "address", widget: "text"}, {label: "Schedule", name: "schedule", widget: "markdown"}, {label: "Notes", name: "notes", widget: "text"}]}
-          - {label: "Contact Section", name: "contactSection", widget: "object", fields: [{label: "Title", name: "label", widget:"string"}, {label: "Image", name: "image", widget: image}, {label: "Description", name: "description", widget: "markdown"}]}
+          - {label: "Contact Section", name: "contactSection", widget: "object", fields: [{label: "Title", name: "title", widget:"string"}, {label: "Image", name: "image", widget: image}, {label: "Description", name: "description", widget: "markdown"}]}
       - file: "src/pages/resources/index.md"
         label: "Resources"
         name: "resources"
