--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-markdown": "^3.4.1",
     "tachyons-sass": "^4.9.3",
     "uuid": "^3.2.1"
   },
