--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,7 +58,7 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "modalities-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Hero Image", name: "heroImage", widget: "image"}
-          - {label: "Modalities", name: "modalities", widget: "markdown"}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/gift/index.md"
         label: "Gift"
         name: "gift"
