--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -90,7 +90,7 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "resources-page"}
           - {label: Title, name: title, widget: string}
-          - {label: "Resources", name: "resources", widget: object, fields: [{label: "Resource", name: "resource", widget: "markdown"}]}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
