--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -66,7 +66,7 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "gift-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Hero Image", name: "heroImage", widget: "image"}
-          - {label: "Description", name: "description", widget: "markdown"}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/faq/index.md"
         label: "FAQ"
         name: "faq"
