--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "jeet": "^7.2.0",
+    "node-sass": "^4.9.3"
   }
 }
