--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
 pages:
   script:
   - yarn install
-  - ./node_modules/.bin/gatsby serve
+  - ./node_modules/.bin/gatsby build --prefix-paths
   artifacts:
     paths:
     - public
