--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,8 +8,8 @@ backend:
     uploadMedia: Upload "{{path}}"
     deleteMedia: Delete "{{path}}"
 
-media_folder: static/img
-public_folder: /img
+media_folder: ./static/img
+public_folder: ./img
 
 collections:
   - name: "blog"
