Revert "add static pages to paths"
This reverts commit a346538632cc6a0dc13e05a70026cb1472c83d71.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,8 +8,8 @@ backend:
     uploadMedia: Upload "{{path}}"
     deleteMedia: Delete "{{path}}"
 
-media_folder: ./lucytumolo-gatsby/static/img
-public_folder: ./lucytumolo-gatsby/img
+media_folder: ./static/img
+public_folder: ./img
 
 collections:
   - name: "blog"
