--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "bulma": "^0.6.0",
     "gatsby": "^1.9.213",
     "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "^1.0.19",
+    "gatsby-plugin-netlify": "latest",
     "gatsby-plugin-netlify-cms": "latest",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.17",
