--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Austin Green",
   "dependencies": {
     "bulma": "^0.6.0",
-    "gatsby": "^1.9.213",
+    "gatsby": "^2.0.24",
     "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "latest",
-    "gatsby-plugin-netlify-cms": "latest",
+    "gatsby-plugin-netlify": "^2.0.1",
+    "gatsby-plugin-netlify-cms": "^3.0.3",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.17",
     "gatsby-plugin-sharp": "^1.6.34",
