Fixed dependencies again

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "Austin Green",
   "dependencies": {
     "bulma": "^0.6.0",
-    "gatsby": "^2.0.24",
+    "gatsby": "^1.9.213",
     "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "^2.0.1",
-    "gatsby-plugin-netlify-cms": "^3.0.3",
+    "gatsby-plugin-netlify": "latest",
+    "gatsby-plugin-netlify-cms": "latest",
     "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "^1.0.17",
+    "gatsby-plugin-sass": "latest",
     "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-remark-images": "^1.5.50",
     "gatsby-source-filesystem": "^1.5.23",
