--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gatsby-plugin-netlify": "latest",
     "gatsby-plugin-netlify-cms": "latest",
     "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "latest",
+    "gatsby-plugin-sass": "^1.0.17",
     "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-remark-images": "^1.5.50",
     "gatsby-source-filesystem": "^1.5.23",
