--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "Austin Green",
   "dependencies": {
     "bulma": "^0.6.0",
-    "gatsby": "^1.9.213",
-    "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "latest",
-    "gatsby-plugin-netlify-cms": "latest",
+    "gatsby": "^2.0.0",
+    "gatsby-link": "^2.0.0",
+    "gatsby-plugin-netlify": "^2.0.0",
+    "gatsby-plugin-netlify-cms": "^3.0.0",
     "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "^1.0.17",
+    "gatsby-plugin-sass": "^2.0.0",
     "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-remark-images": "^1.5.50",
     "gatsby-source-filesystem": "^1.5.23",
@@ -20,7 +20,7 @@
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^1.7.0",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.4.1",
     "tachyons-sass": "^4.9.3",
