--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-netlify-cms": "^3.0.0",
     "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "^2.0.0",
-    "gatsby-plugin-sharp": "^1.6.34",
-    "gatsby-remark-images": "^1.5.50",
-    "gatsby-source-filesystem": "^1.5.23",
-    "gatsby-transformer-remark": "^1.7.33",
-    "gatsby-transformer-sharp": "^1.6.21",
-    "lodash": "^4.17.5",
+    "gatsby-plugin-sass": "latest",
+    "gatsby-plugin-sharp": "^1.6.48",
+    "gatsby-remark-images": "^1.5.67",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-remark": "^1.7.44",
+    "gatsby-transformer-sharp": "^1.6.27",
+    "lodash": "^4.17.11",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^1.7.0",
-    "prop-types": "^15.6.0",
+    "netlify-cms": "^1.9.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
-    "react-markdown": "^3.4.1",
+    "react-markdown": "^3.6.0",
     "tachyons-sass": "^4.9.3",
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.2"
   },
   "keywords": [
     "gatsby"
@@ -41,6 +42,6 @@
   },
   "devDependencies": {
     "jeet": "^7.2.0",
-    "node-sass": "^4.9.3"
+    "node-sass": "^4.9.4"
   }
 }
