--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
-    "bulma": "^0.6.0",
-    "gatsby": "^2.0.0",
+    "bulma": "^0.6.2",
+    "gatsby": "^2.0.19",
     "gatsby-link": "^2.0.0",
     "gatsby-plugin-netlify": "^2.0.0",
-    "gatsby-plugin-netlify-cms": "^3.0.0",
-    "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "latest",
+    "gatsby-plugin-netlify-cms": "^3.0.3",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^1.6.48",
-    "gatsby-remark-images": "^1.5.67",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-remark": "^1.7.44",
-    "gatsby-transformer-sharp": "^1.6.27",
+    "gatsby-remark-images": "^2.0.4",
+    "gatsby-remark-smartypants": "^2.0.5",
+    "gatsby-source-filesystem": "^2.0.4",
+    "gatsby-transformer-remark": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.1.3",
     "lodash": "^4.17.11",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^1.9.3",
+    "netlify-cms": "^2.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.5.2",
