--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -10,33 +10,10 @@ backend:
     uploadMedia: Upload "{{path}}"
     deleteMedia: Delete "{{path}}"
 
-media_folder: ./static/img
+media_folder: static/img
 public_folder: ./img
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "src/pages/blog"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "About Image", name: "aboutImage", widget: "image"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Description", name: "description", widget: "text"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Tags", name: "tags", widget: "list"}
-  - name: "testimonials"
-    label: "Testimonials"
-    folder: "src/pages/testimonials"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "testimonial-post"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Testimonial Image", name: "testimonialImage", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
   - name: "pages"
     label: "Pages"
     files:
@@ -118,3 +95,13 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "resources-page"}
           - {label: Title, name: title, widget: string}
           - {label: "Body", name: "body", widget: "markdown"}
+  - name: "testimonials"
+    label: "Testimonials"
+    folder: "src/pages/testimonials"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "testimonial-post"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Testimonial Image", name: "testimonialImage", widget: "image"}
+      - {label: "Body", name: "body", widget: "markdown"}
